<resources>
  <string name="app_name">Unit Price Calculator</string>

  <string name="unit_type">Unit Type</string>
  <string name="metric">Metric</string>
  <string name="imperial">Imperial</string>
  <string name="imperial_us">Imperial (US)</string>
  <string name="imperial_uk">Imperial (UK)</string>

  <string name="price">Price</string>
  <string name="size">Size</string>
  <string name="unit">Unit</string>

  <string name="preferred_system">Unit Systems</string>
  <string name="drag_and_drop_prompt">Drag and drop to reorder</string>
  <string name="add_row">Add row</string>
  <string name="remove_row">Remove row</string>
  <string name="change_currency_symbol">Change currency</string>
  <string name="currency_header">Currency</string>

  <string name="show_price_per">Show price per:</string>
  <string name="main_final_summary">The most economical option is row %1$d</string>
  <string name="m_per_u">%1$s per %2$s</string>
  <string name="m_per_s_u">%1$s per %2$s %3$s</string>
  <string name="m_per_qxu">%1$s per %2$s x %3$s</string>
  <string name="m_per_qxs_u">%1$s per %2$s x %3$s %4$s</string>

  <string name="save">Save</string>
  <string name="clear">Clear</string>
  <string name="rename">Rename</string>
  <string name="delete">Delete</string>
  <string name="move_up">Move up</string>
  <string name="move_down">Move down</string>
  <string name="give_name">Please enter a name for this comparison</string>
  <string name="enter_name">Enter name here</string>
  <string name="saved_from_date">Saved on %1$s</string>

  <string name="current_comparison">Current comparison</string>
  <string name="saved_comparisons">Saved comparisons</string>
  <string name="rate_app">Rate app</string>
  <string name="settings">Settings</string>
  <string name="share_app">Share app</string>
  <string name="send_feedback">Send feedback</string>
  <string name="no_email_client">No email clients installed</string>

  <!-- MASS -->
  <string name="weight">Weight</string>
  <string name="gram_symbol">g</string>
  <string name="kilogram_symbol">kg</string>
  <string name="milligram_symbol">mg</string>
  <string name="ounce_symbol">oz</string>
  <string name="pound_symbol">lbs</string>
  <string name="stone_symbol">st</string>

  <!-- VOLUME -->
  <string name="volume">Volume</string>
  <string name="millilitre_symbol">mL</string>
  <string name="litre_symbol">L</string>
  <string name="cubic_centimetre_symbol">cc</string>
  <string name="gallon_symbol">gal</string>
  <string name="quart_symbol">qt</string>
  <string name="pint_symbol">pt</string>
  <string name="cup_symbol">cps</string>
  <string name="fluid_ounce_symbol">oz</string>
  <string name="tablespoon_symbol">tbsp</string>
  <string name="teaspoon_symbol">tsp</string>
  <string name="us_gallon_symbol">US gal</string>
  <string name="us_quart_symbol">US qt</string>
  <string name="us_pint_symbol">US pt</string>
  <string name="us_cup_symbol">US cps</string>
  <string name="us_fluid_ounce_symbol">US oz</string>
  <string name="us_tablespoon_symbol">US tbsp</string>
  <string name="us_teaspoon_symbol">US tsp</string>

  <!-- LENGTH -->
  <string name="length">Length</string>
  <string name="metre_symbol">m</string>
  <string name="kilometre_symbol">km</string>
  <string name="centimetre_symbol">cm</string>
  <string name="millimetre_symbol">mm</string>
  <string name="inch_symbol">in</string>
  <string name="foot_symbol">ft</string>
  <string name="yard_symbol">yd</string>
  <string name="mile_symbol">mi</string>

  <string name="quantity">Quantity</string>
  <string name="unit_symbol">unit</string>
  <string name="unit_name">{count, plural, =1{unit} other{# units}}</string>
  <string name="dozen_symbol">dozen</string>
  <string name="dozen_name">{count, plural, =1{dozen} other{# dozen}}</string>

  <string name="time">Time</string>
  <string name="day_symbol">day</string>
  <string name="day_name">{count, plural, =1{day} other{# days}}</string>
  <string name="week_symbol">wk</string>
  <string name="week_name">{count, plural, =1{week} other{# weeks}}</string>
  <string name="month_symbol">mo</string>
  <string name="month_name">{count, plural, =1{month} other{# months}}</string>
  <string name="year_symbol">yr</string>
  <string name="year_name">{count, plural, =1{year} other{# years}}</string>
  <string name="second_symbol">sec</string>
  <string name="second_name">{count, plural, =1{second} other{# seconds}}</string>
  <string name="minute_symbol">min</string>
  <string name="minute_name">{count, plural, =1{minute} other{# minutes}}</string>
  <string name="hour_symbol">hr</string>
  <string name="hour_name">{count, plural, =1{hour} other{# hours}}</string>


  <!-- AREA -->
  <string name="area">Area</string>
  <string name="square_metre_symbol">m\u00B2</string>
  <string name="square_centimetre_symbol">cm\u00B2</string>
  <string name="square_millimetre_symbol">mm\u00B2</string>
  <string name="square_millimetre_name" translatable="false">{count, plural, other{# mm\u00B2}}</string>
  <string name="square_kilometre_symbol">km\u00B2</string>
  <string name="are_symbol">a</string>
  <string name="are_name">{count, plural, =1{are} other{# ares}}</string>
  <string name="hectare_symbol">ha</string>
  <string name="acre_symbol">ac</string>
  <string name="square_foot_symbol">ft\u00B2</string>
  <string name="square_inch_symbol">in\u00B2</string>
  <string name="square_yard_symbol">yd\u00B2</string>
  <string name="square_mile_symbol">mi\u00B2</string>
  <string name="cubic_metre_symbol">m\u00B3</string>

  <string name="send_email">Send Email</string>
  <string name="feedback_subject">Feedback for Unit Price Calculator</string>

  <string name="untitled_italics"><i>Untitled</i></string>
  <string name="unsaved_changes">You have unsaved changes. Click on the save button to save.</string>
  <string name="all_changes_saved">All changes are saved. From now on, the save button will indicate when you have changes to save.\n\nThis message will disappear and not return in %1$d…</string>

  <string name="add_note">Add note</string>
  <string name="edit_note">Edit note</string>
  <string name="enter_note_hint">Enter a note</string>
  <string name="dark_mode">Dark mode</string>
  <string name="match_device">Match device</string>
  <string name="dark_mode_always_dark">Always dark</string>
  <string name="dark_mode_always_light">Always light</string>
  <string name="default_unit_quantity">Default unit quantities</string>
  <string name="default_unit_quantity_summary_line">%1$s: %2$s</string>
  <string name="default_quantity_dialog_header">Default quantity: %1$s</string>
  <string name="search">Search</string>
  <string name="initial_screen">Initial screen</string>

  <plurals name="saved_comparison_items">
    <item quantity="one">%1$s (%2$d item)</item>
    <item quantity="other">%1$s (%2$d items)</item>
  </plurals>

  <string name="saved_comparison_subtitle">Best item: %1$s</string>

  <string name="change_order_title">Change order?</string>
  <string name="show_percentages">Show comparison percentages</string>
  <string name="note_row_x">Row %2$d: %1$s</string>
  <string name="initial_screen_new_comparison">New comparison</string>
  <string name="row_x">Row %1$d</string>
  <string name="change_order_message">Long-pressing a column header re-orders the rows to be sorted by that column</string>

  <string name="export_data">Export data</string>
  <string name="import_data">Import data</string>
  <string name="error_opening_file">Error reading/writing file</string>
  <string name="saved_successfully">Saved successfully</string>
  <string name="buy_me_a_coffee">Buy me a coffee</string>
  <string name="language_title">Language</string>
  <string name="saved">Saved</string>
  <string name="current">Current</string>
  <string name="comparison_unit">Comparison Unit</string>
  <string name="title">Title</string>
  <string name="last_modified">Last Modified</string>
  <string name="options">Options</string>
</resources>
