<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/vertical_margin"
        android:paddingBottom="@dimen/vertical_margin">

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/clear_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textCapSentences"
            android:hint="@string/untitled_italics"
            android:gravity="center"
            android:importantForAutofill="no"
            android:background="@null"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:saveEnabled="false"
            app:layout_constraintTop_toTopOf="@id/clear_button"
            app:layout_constraintBottom_toBottomOf="@id/clear_button"
            app:layout_constraintStart_toEndOf="@id/clear_button"
            app:layout_constraintEnd_toStartOf="@id/save_button"/>

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/save" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/unit_type_prompt_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/top_bar"
            app:layout_constraintEnd_toEndOf="@+id/row_container"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/unit_type_drop_down"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/unit_type">

                <com.unitpricecalculator.view.ExposedDropdownMenu
                    android:id="@+id/unit_type_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:inputType="none"
                    android:saveEnabled="false"
                    android:text=" "
                    tools:text="Volume" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/container_header"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/unit_type_prompt_container"
            app:layout_constraintStart_toStartOf="@id/row_container"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                style="@style/HeaderTextView"
                android:layout_width="@dimen/header_column_1" />

            <TextView
                android:id="@+id/price_header"
                style="@style/HeaderTextView"
                android:layout_width="@dimen/header_column_2"
                android:background="?attr/selectableItemBackground"
                android:text="@string/price" />

            <TextView
                android:id="@+id/number_header"
                style="@style/HeaderTextView"
                android:layout_width="@dimen/header_column_3"
                android:background="?attr/selectableItemBackground"
                android:text="#" />

            <TextView
                android:id="@+id/size_header"
                style="@style/HeaderTextView"
                android:layout_width="@dimen/header_column_4"
                android:background="?attr/selectableItemBackground"
                android:text="@string/size" />

            <TextView
                style="@style/HeaderTextView"
                android:layout_width="@dimen/header_column_5"
                android:text="@string/unit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/container_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            tools:layout_width="match_parent" />

        <RelativeLayout
            android:id="@+id/button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/row_container"
            app:layout_constraintEnd_toEndOf="@id/row_container"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin">

            <Button
                android:id="@+id/add_row_btn"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/add_row" />

            <Button
                android:id="@+id/remove_row_btn"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/add_row_btn"
                android:text="@string/remove_row" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/final_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_container"
            app:layout_constraintEnd_toEndOf="@id/row_container"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingEnd="@dimen/horizontal_margin">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/comparison_unit">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:importantForAccessibility="no"
                    android:inputType="none"
                    android:text=" " />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/final_size"
                    android:layout_width="@dimen/header_column_4"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@null"
                    android:importantForAutofill="no"
                    android:hint="1"
                    android:inputType="numberDecimal" />

                <Space
                    android:layout_width="16dp"
                    android:layout_height="wrap_content"/>

                <Spinner
                    android:id="@+id/final_spinner"
                    android:layout_width="@dimen/header_column_5"
                    android:layout_height="wrap_content"
                    android:popupBackground="@drawable/spinner_background"/>

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/final_text_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/final_container"
            android:gravity="center"
            android:paddingStart="@dimen/horizontal_margin"
            android:paddingTop="8dp"
            android:paddingEnd="@dimen/horizontal_margin"
            android:paddingBottom="8dp"
            android:textColor="@color/primaryText"
            android:textIsSelectable="true"
            android:textSize="16sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>