<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#fff">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/vertical_margin"
    android:paddingBottom="@dimen/vertical_margin">

    <TextView
      android:id="@+id/saved_changes_status"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_alignParentEnd="true"
      android:paddingLeft="@dimen/horizontal_margin"
      android:paddingRight="@dimen/horizontal_margin"
      android:paddingBottom="8dp"/>

    <View
      android:id="@+id/saved_changes_divider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/dividerColor"
      android:layout_below="@+id/saved_changes_status"/>

    <RelativeLayout
      android:id="@+id/unit_type_prompt_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/saved_changes_divider"
      android:layout_alignEnd="@+id/row_container"
      android:layout_alignWithParentIfMissing="true"
      android:paddingLeft="@dimen/horizontal_margin"
      android:paddingRight="@dimen/horizontal_margin">

      <TextView
        android:id="@+id/unit_type_prompt"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/unit_type_spinner"
        android:layout_alignParentStart="true"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"
        android:text="@string/unit_type"
        android:textColor="@color/primaryText"
        android:textSize="18sp"/>

      <Spinner
        android:id="@+id/unit_type_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/dividerColor"
      android:layout_below="@+id/unit_type_prompt_container"
      android:layout_marginLeft="32dp"
      android:layout_marginRight="32dp"/>

    <LinearLayout
      android:id="@+id/container_header"
      android:layout_width="wrap_content"
      android:layout_height="50dp"
      android:layout_alignStart="@+id/row_container"
      android:layout_below="@+id/divider"
      android:layout_marginTop="8dp"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:orientation="horizontal">

      <TextView
        style="@style/HeaderTextView"
        android:layout_width="@dimen/header_column_1"/>

      <TextView
        android:id="@+id/price_header"
        style="@style/HeaderTextView"
        android:layout_width="@dimen/header_column_2"
        android:background="?attr/selectableItemBackground"
        android:text="@string/price"/>

      <TextView
        style="@style/HeaderTextView"
        android:layout_width="@dimen/header_column_3"
        android:text="#"/>

      <TextView
        style="@style/HeaderTextView"
        android:layout_width="@dimen/header_column_4"
        android:text="@string/size"/>

      <TextView
        style="@style/HeaderTextView"
        android:layout_width="@dimen/header_column_5"
        android:text="@string/unit"/>


    </LinearLayout>

    <LinearLayout
      android:id="@+id/row_container"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/container_header"
      android:layout_centerHorizontal="true"
      android:orientation="vertical"/>

    <RelativeLayout
      android:id="@+id/button_container"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/row_container"
      android:layout_below="@+id/row_container"
      android:paddingLeft="@dimen/horizontal_margin"
      android:paddingRight="@dimen/horizontal_margin">

      <TextView
        android:id="@+id/add_row_btn"
        style="@style/FlatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/add_row"/>

      <TextView
        android:id="@+id/remove_row_btn"
        style="@style/FlatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/add_row_btn"
        android:text="@string/remove_row"/>

    </RelativeLayout>

    <RelativeLayout
      android:id="@+id/final_container"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/row_container"
      android:layout_below="@+id/button_container"
      android:paddingLeft="@dimen/horizontal_margin"
      android:paddingRight="@dimen/horizontal_margin">

      <Spinner
        android:id="@+id/final_spinner"
        android:layout_width="@dimen/header_column_5"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>

      <EditText
        android:id="@+id/final_size"
        android:layout_width="@dimen/header_column_4"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/prompt_price_per"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/final_spinner"
        android:gravity="center"
        android:hint="1"
        android:inputType="numberDecimal"/>

      <TextView
        android:id="@+id/prompt_price_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/final_size"
        android:padding="8dp"
        android:gravity="end"
        android:text="@string/show_price_per"
        android:textColor="@color/primaryText"
        android:textSize="16sp"/>

    </RelativeLayout>

    <TextView
      android:id="@+id/final_text_summary"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/final_container"
      android:paddingTop="8dp"
      android:paddingBottom="8dp"
      android:paddingLeft="@dimen/horizontal_margin"
      android:paddingRight="@dimen/horizontal_margin"
      android:gravity="center"
      android:textColor="@color/primaryText"
      android:textIsSelectable="true"
      android:textSize="16sp"/>

  </RelativeLayout>

</ScrollView>